Basic structure is ready. The project is assembled